--- a/index.css
+++ b/index.css
@@ -154,7 +154,7 @@ button{
     .cointainer{
         display: block;
         margin: 0px 0px;
-        height: 100%;
+        height: 100vh;
         width: 375px;
         border-radius: 0px;
         padding: 0px;
