--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@ body{
     justify-content: center;
     height: 100vh;
     font-size: 16px;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    /*font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;*/
 
 }
 .cointainer{
